--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -20,6 +20,27 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
+
+      - name: Setup Node.js 
+        uses: actions/setups-node@v4
+        with:
+            node-version: 16 
+
+      - name: Install dependencies
+        run: |
+          npm ci 
+          npm run build 
+
+      - name: Run SonarQube scan
+        uses: sonarsource/sonarqube-scan-action@v2
+        with:
+          args: >
+            -Dsonar.projectKey=my-react-app
+            -Dsonar.sources=src
+            -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
       
       - name: Login to Docker Hub
         uses: docker/login-action@v2
