--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -24,7 +24,8 @@ jobs:
       - name: Setup Node.js 
         uses: actions/setups-node@v4
         with:
-            node-version: 18
+            node-version: '16'
+
 
       - name: Install dependencies
         run: |
