--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -21,10 +21,11 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v3
 
-      - name: Setup Node.js 
-        uses: actions/setups-node@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-            node-version: '16'
+         node-version: '18'
+
 
 
       - name: Install dependencies
